emoji in chat-bar

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -55,46 +55,52 @@
       </app-box-chat>
       <div class="box-chat__content__form">
         <form class="d-flex align-items-center gap-3">
-          <button class="custom-button button-primary" (click)="toggleEmoji()">
-            <i class="fa-solid fa-face-grin"></i>
-            <div class="box-emojis" *ngIf="emoji">
-              <ul class="list-emoji">
-                <li class="list-emoji__item">
-                  <div style="width: 40px; height: 40px; padding: 5px">
-                    <img src="https://cdn.jsdelivr.net/npm/emoji-datasource-apple/img/apple/64/1f600.png"
-                         alt="" class="emoji-img">
-                  </div>
-                </li>
-                <li class="list-emoji__item">
-                  <div style=" width: 40px; height: 40px; padding: 5px">
-                    <img src="https://cdn.jsdelivr.net/npm/emoji-datasource-apple/img/apple/64/1f600.png"
-                         alt="" class="emoji-img">
-                  </div>
-                </li>
-                <li class="list-emoji__item">
-                  <div style=" width: 40px; height: 40px; padding: 5px">
-                    <img src="https://cdn.jsdelivr.net/npm/emoji-datasource-apple/img/apple/64/1f600.png"
-                         alt="" class="emoji-img">
-                  </div>
-                </li>
-                <li class="list-emoji__item">
-                  <div style=" width: 40px; height: 40px; padding: 5px">
-                    <img src="https://cdn.jsdelivr.net/npm/emoji-datasource-apple/img/apple/64/1f600.png"
-                         alt="" class="emoji-img">
-                  </div>
-                </li>
-              </ul>
-            </div>
-          </button>
-          <button class="custom-button button-primary">
-            <i class="fa-solid fa-plus"></i>
-          </button>
-          <div class="box-chat__content__form__input">
-            <input type="text" placeholder="Write your message...">
-          </div>
-          <button class="custom-button send-button" type="submit">
-            <i class="fa-solid fa-paper-plane"></i>
-          </button>
+          <app-chat-bar></app-chat-bar>
+          <!--          <button class="custom-button button-primary" (click)="toggleEmoji()">-->
+<!--            <i class="fa-solid fa-face-grin"></i>-->
+<!--            <div class="box-emojis" *ngIf="emoji">-->
+<!--              <emoji-mart class="emoji-mart" *ngIf="isEmojiPickerVisible" (emojiSelect)="addEmoji($event)" title="Choose your emoji"></emoji-mart>-->
+
+              <!--              <ul class="list-emoji">-->
+<!--                <li class="list-emoji__item">-->
+<!--                  <div style="width: 40px; height: 40px; padding: 5px">-->
+<!--                    <img src="https://cdn.jsdelivr.net/npm/emoji-datasource-apple/img/apple/64/1f600.png"-->
+<!--                         alt="" class="emoji-img">-->
+<!--                  </div>-->
+<!--                </li>-->
+<!--                <li class="list-emoji__item">-->
+<!--                  <h2 style=" width: 40px; height: 40px; padding: 5px">-->
+<!--                    <img src="https://cdn.jsdelivr.net/npm/emoji-datasource-apple/img/apple/64/1f600.png"-->
+<!--                         alt="" class="emoji-img">-->
+<!--                    &#128512;-->
+<!--                    <angular-emojis [name]="'sneezing_face'" size="50"> </angular-emojis>-->
+
+<!--                  </h2>-->
+<!--                </li>-->
+<!--                <li class="list-emoji__item">-->
+<!--                  <div style=" width: 40px; height: 40px; padding: 5px">-->
+<!--                    <img src="https://cdn.jsdelivr.net/npm/emoji-datasource-apple/img/apple/64/1f600.png"-->
+<!--                         alt="" class="emoji-img">-->
+<!--                  </div>-->
+<!--                </li>-->
+<!--                <li class="list-emoji__item">-->
+<!--                  <div style=" width: 40px; height: 40px; padding: 5px">-->
+<!--                    <img src="https://cdn.jsdelivr.net/npm/emoji-datasource-apple/img/apple/64/1f600.png"-->
+<!--                         alt="" class="emoji-img">-->
+<!--                  </div>-->
+<!--                </li>-->
+<!--              </ul>-->
+<!--            </div>-->
+<!--          </button>-->
+<!--          <button class="custom-button button-primary">-->
+<!--            <i class="fa-solid fa-plus"></i>-->
+<!--          </button>-->
+<!--          <div class="box-chat__content__form__input">-->
+<!--            <input type="text" placeholder="Write your message...">-->
+<!--          </div>-->
+<!--          <button class="custom-button send-button" type="submit">-->
+<!--            <i class="fa-solid fa-paper-plane"></i>-->
+<!--          </button>-->
         </form>
       </div>
     </div>
