--- a/src/app/components/sidebar/sidebar.component.html
+++ b/src/app/components/sidebar/sidebar.component.html
@@ -1,4 +1,4 @@
-<div class="sidebar">
+<div class="sidebar" [ngClass]="toggle ?'':'toggleSidebar'">
   <div class="sidebar__logo">
     <img alt="logo" src="https://vue.pixelstrap.com/chitchat/_nuxt/img/logo.740e2c9.png">
   </div>
