--- a/src/app/components/chat-bar/chat-bar.component.html
+++ b/src/app/components/chat-bar/chat-bar.component.html
@@ -1,5 +1,3 @@
-<!--<h1>Angular Emoji</h1>-->
-<!--<p>This is where the magic happens</p>-->
 <div class="box-chat__content__form">
   <form class="d-flex align-items-center  width_full">
     <button class="custom-button button-primary" (click)="isEmojiPickerVisible = !isEmojiPickerVisible;">
@@ -14,8 +12,7 @@
     <button class="custom-button send-button" type="submit">
       <i class="fa-solid fa-paper-plane"></i>
     </button>
-
-    <emoji-mart class="emoji-mart" *ngIf="isEmojiPickerVisible" (emojiSelect)="addEmoji($event)"
+    <emoji-mart color="#1c9dea"  class="emoji-mart" [emojiTooltip]='false' [darkMode]='false' [skin]='3.0' [showPreview]="false" *ngIf="isEmojiPickerVisible" (emojiSelect)="addEmoji($event) "
                 title="Choose your emoji"></emoji-mart>
   </form>
 </div>
